@@ -358,6 +358,39 @@ sub is_valid_name
     return $tz && UNIVERSAL::isa( $tz, 'DateTime::TimeZone') ? 1 : 0
 }
 
+sub STORABLE_freeze
+{
+    my $self = shift;
+
+    return $self->name;
+}
+
+sub STORABLE_thaw
+{
+    my $self = shift;
+    my $cloning = shift;
+    my $serialized = shift;
+
+    my $class = ref $self || $self;
+
+    my $obj;
+    if ( $class->isa(__PACKAGE__) )
+    {
+        $obj = __PACKAGE__->new( name => $serialized );
+    }
+    else
+    {
+        $obj = $class->new( name => $serialized );
+    }
+
+    # This breaks the "singleton-ness" of timezone objects, but
+    # there's no way to tell Storable to simply use an existing
+    # object.  This shouldn't matter since we copy the underlying
+    # structures by reference here, so span generation in one object
+    # will be visible in another also in memory.
+    %$self = %$obj;
+}
+
 #
 # Functions
 #
@@ -589,6 +622,16 @@ or not the string is a valid time zone name.  If you are using
 C<DateTime::TimeZone::Alias>, any aliases you've created will be valid.
 
 =back
+
+=head2 Storable Hooks
+
+This module provides freeze and thaw hooks for C<Storable> so that the
+huge data structures for Olson time zones are not actually stored in
+the serialized structure.
+
+If you subclass C<DateTime::TimeZone>, you will inherit its hooks,
+which may not work for your module, so please test the interaction of
+your module with Storable.
 
 =head2 Functions
 
